fixing the extra space busted copyright

--- a/app/style/_footer.scss
+++ b/app/style/_footer.scss
@@ -104,6 +104,7 @@
    }
 
    &__copyright {
+      display: inline-block;
       position: relative;
       color: $Mediumgrey;
       bottom: 14px;
