--- a/app/style/_header.scss
+++ b/app/style/_header.scss
@@ -82,7 +82,7 @@
         z-index: 1;
         opacity: 1;
         background:lighten($Darkgrey,5%);
-        height: 100vh;
+        height: 102vh;
         width: 50vw;
         position: fixed;
         top: 0;
